styles/incursionStyle.css
#incursion-game-box {
  flex-direction: column;
  background-image: url("../images/Bg6.png");
  background-size: cover;
}

.fog{
  z-index: 1;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;

  mask-image: radial-gradient(
    circle var(--mist-radius) at var(--mist-x) var(--mist-y),
    /* circle 150px at 50px 200px, */
    rgba(0,0,0,0) 0%,
    rgba(0,0,0,0) 30%,
    rgba(0,0,0,1) 100%
  );
  mask-repeat: no-repeat;
  mask-position: center;
  mask-size: cover;
  
  .fog video {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover; /* Asegura que el video cubra todo el espacio sin deformarse */
    z-index: -1; /* Coloca el video detrás de cualquier otro contenido dentro de .fog (si lo hubiera) */
  }
}


#menu-incursion {
  opacity: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  height: 15%;
  padding: 20px;

  backdrop-filter: brightness(75%) sepia(100%) hue-rotate(280deg);
  font-family: "Rubik dirt";

  #menu-incursion-list {
    display: flex;
    width: 100%;
    justify-content: space-around;

    .resources-li{
          padding: 3px 20px 3px 20px;
          min-width: 110px;
          /* background-color: cadetblue; */
          
          border: solid 2px rgba(50, 50, 50, 0.9);
          background-size: cover;
          border-radius: 25px;
          display: flex;
          gap: 5px;
          justify-content: space-between;
          align-items: center;

          &#Steel-btn{
            background-image: url("../images/resources/Bg-resource-steel.png");
          }
          &#Bronze-btn{
            background-image: url("../images/resources/Bg-resource-bronze.png");
          }
          &#Copper-btn{
            background-image: url("../images/resources/Bg-resource-copper.png");
          }
          &#Tin-btn{
            background-image: url("../images/resources/Bg-resource-tin.png");
          }
          &#Coins-btn{
            background-image: url("../images/resources/Bg-resource-coins.png");
          }
        }

  }
}


#incursion-ui {
  background-image: url("../images/Bg6.png");
  background-size: cover;
  height: 100%;
  padding: 20px;
  position: relative;

  .timer {
    color: white;
    font-weight: 300;
    font-size: 50px;
    text-align: center;
    font-family: "Rubik dirt";
    z-index: 3;
    position: relative;
  }

  .static-buildings {
    position: absolute;
    pointer-events: none;
    /* background-image: url("../images/houses/House15-06.png"); */
    background-size: cover;
  }
  
  
  .area-producer {
    position: absolute;
    pointer-events: none;
    border-radius: 100%;
    text-align: center;
    color: white;
    font-weight: 800;
    filter: blur(20px);
    opacity: 90%;
    
    &.Steel-producer{
      background-color: rgb(139, 157, 173);
    }
    &.Bronze-producer{
      background-color: orange;
    }
    &.Copper-producer{
      background-color: rgb(255, 106, 51);
    }
    &.Tin-producer{
      background-color: lightslategray;
    }
    &.Coins-producer{
      background-color: yellow;
    }
  }

  /* .character {
    border: solid 2px red;
  } */
  
  #player-character {
    position: absolute;
    background-image: url("../images/characters/adventurerFemale/adventurerFemale41.png");
    background-size: contain;
    background-repeat: no-repeat;
    /* font-size: 0.6em; */
    z-index: 2;
  }
  
  .enemy {
    position: absolute;
    /* background-image: url("../images/characters/guard/soldier00.png"); */
    background-size: contain;
    background-repeat: no-repeat;
    text-align: center;
    pointer-events: none;
  }
  
  .projectile {
    position: absolute;
    background-color: orange;
    border-radius: 50%;
    z-index: 2;
  }
}

